turtleart.lessons.turtleart.Main.DiskTwo.scala.error
Source:14: error: type mismatch;
 found   : Double(32.5)
 required: Int
	for (c <- 1 to 32.5)
                       ^