turtleart.lessons.turtleart.Main.DiskTwo.scala.code
override def run() {
	for (c <- 1 to 9)
	{
		quartCercle(Color.black)
		quartCercle(Color.red)
	}

}

def quartCercle(couleur:Color)
{
	setCouleur(couleur)
	for (c <- 1 to 32.5)
	{
		avance(100); 
		recule(100); 
		droite (0.6);
	}
}